--- a/app/src/main/res/layout/fragment_game_grid.xml
+++ b/app/src/main/res/layout/fragment_game_grid.xml
@@ -55,6 +55,7 @@
         android:stretchMode="columnWidth"
         android:gravity="center"
         android:layout_below="@id/current_score_textview"
+        android:listSelector="@android:color/transparent"
         android:layout_marginTop="@dimen/gridview_top_margin"
         android:layout_marginLeft="@dimen/gridview_horizontal_margin"
         android:layout_marginRight="@dimen/gridview_horizontal_margin"/>
